fix mobile header z-index

--- a/bikespace_frontend/src/components/dashboard/dashboard-header/dashboard-header.module.scss
+++ b/bikespace_frontend/src/components/dashboard/dashboard-header/dashboard-header.module.scss
@@ -56,7 +56,7 @@
   $nav-width: 250px;
 
   .header {
-    z-index: 200;
+    z-index: 500;
     position: fixed;
     top: $spacing-4;
     right: $spacing-4;
@@ -68,7 +68,7 @@
     padding: 0;
 
     .navToggle {
-      z-index: 201;
+      z-index: 2;
       height: 100%;
       display: block;
       padding: $spacing-2;
